--- a/BatleshipConsoleGame/BatleshipConsoleGame.csproj
+++ b/BatleshipConsoleGame/BatleshipConsoleGame.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PvC.cs" />
     <Compile Include="Computer.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PvP.cs" />
     <Compile Include="Sea.cs" />
     <Compile Include="Ship.cs" />
   </ItemGroup>
